--- a/finish/Audity/Audity/Audity/Audity.csproj
+++ b/finish/Audity/Audity/Audity/Audity.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Models\Receipt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AzureReceiptService.cs" />
+    <Compile Include="ViewModel\ReceiptsLogViewModel.cs" />
     <Compile Include="Views\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
